--- a/YesPojiQuota.Windows/Views/MainPage.xaml
+++ b/YesPojiQuota.Windows/Views/MainPage.xaml
@@ -27,18 +27,8 @@
         </Grid.RowDefinitions>
 
         <local:AccountsPanel Grid.RowSpan="2" Margin="0 10"/>
+        <partial:InnAppToastNotification Grid.Row="0"/>
 
-        <Grid Grid.Row="0" Background="Transparent"
-              Visibility="{x:Bind vm.NotiVisible, Mode=OneWay}">
-            <local:BackDrop BlurAmount="2"
-                            TintColor="Aqua"
-                            TintAlpha="80"
-                            SaturationIntensity="1.8"/>
-            <Grid>
-                <TextBlock Text="{x:Bind vm.NotiMessage, Mode=OneWay}"
-                           Padding="5"/>
-            </Grid>
-        </Grid>
         <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="auto"/>
