--- a/YesPojiQuota.Windows/Views/Partials/AccountsPanel.xaml
+++ b/YesPojiQuota.Windows/Views/Partials/AccountsPanel.xaml
@@ -18,7 +18,7 @@
             <Grid>
                 <Grid.ContextFlyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem Text="Refresh" Click="{x:Bind Init}" />
+                        <MenuFlyoutItem Text="Refresh" Click="{x:Bind InitAsync}" />
                         <MenuFlyoutSeparator/>
                         <MenuFlyoutItem Text="Delete" Click="{x:Bind Remove}">
                             <!--<FlyoutBase.AttachedFlyout>
