--- a/YesPojiQuota.Windows/Views/MainPage.xaml
+++ b/YesPojiQuota.Windows/Views/MainPage.xaml
@@ -26,7 +26,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <local:AccountsPanel Grid.RowSpan="2" Margin="0 10"/>
+        <partial:AccountsPanel Grid.Row="1" Grid.RowSpan="1" Margin="0 10"/>
         <partial:InnAppToastNotification Grid.Row="0"/>
     </Grid>
 </Page>
