--- a/YesPojiQuota.Windows/Views/Partials/AccountsPanel.xaml
+++ b/YesPojiQuota.Windows/Views/Partials/AccountsPanel.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="YesPojiQuota.Views.AccountsPanel"
+    x:Class="YesPojiQuota.Views.Partials.AccountsPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:YesPojiQuota.Views"
+    xmlns:local="using:YesPojiQuota.Views.Partials"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="using:YesPojiQuota.ViewModels"
