margin and grid changes

--- a/YesPojiQuota.Windows/Views/MainPage.xaml
+++ b/YesPojiQuota.Windows/Views/MainPage.xaml
@@ -22,11 +22,11 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition  Height="30"/>
+            <RowDefinition  Height="auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <partial:AccountsPanel Grid.Row="1" Grid.RowSpan="1" Margin="0 10"/>
+        <partial:AccountsPanel Grid.Row="1" Grid.RowSpan="1" Margin="0"/>
         <partial:InnAppToastNotification Grid.Row="0"/>
     </Grid>
 </Page>
