-Change titlebar color to accent color -Use Dark Theme

--- a/YesPojiQuota.Windows/App.xaml
+++ b/YesPojiQuota.Windows/App.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:YesPojiQuota"
     xmlns:vm="using:YesPojiQuota.ViewModels"
-    RequestedTheme="Light">
+    RequestedTheme="Dark">
 
     <Application.Resources>
         <vm:ViewModelLocator x:Key="Locator" />
