--- a/YesPojiQuota.Windows/Views/MainPage.xaml
+++ b/YesPojiQuota.Windows/Views/MainPage.xaml
@@ -6,6 +6,8 @@
     xmlns:partial="using:YesPojiQuota.Views.Partials"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:acrylic="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"  
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     DataContext="{Binding MainPage, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
@@ -21,12 +23,21 @@
     </Page.BottomAppBar>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        
         <Grid.RowDefinitions>
             <RowDefinition  Height="auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <partial:AccountsPanel Grid.Row="1" Grid.RowSpan="1" Margin="0"/>
+        <Grid Grid.Row="1" Grid.RowSpan="1" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+              Opacity="0.6">
+            <interactivity:Interaction.Behaviors>
+                <acrylic:Blur Value="30"
+                        AutomaticallyStart="True" />
+            </interactivity:Interaction.Behaviors>
+        </Grid>
+
+        <partial:AccountsPanel Margin="0" Grid.Row="1" Grid.RowSpan="1" />
         <partial:InnAppToastNotification Grid.Row="0"/>
     </Grid>
 </Page>
