--- a/YesPojiQuota.Windows/Views/SettingsPage.xaml
+++ b/YesPojiQuota.Windows/Views/SettingsPage.xaml
@@ -5,10 +5,20 @@
     xmlns:local="using:YesPojiQuota.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:acrylic="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"  
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     DataContext="{Binding Settings, Source={StaticResource Locator}}"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid>
+            <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Opacity="0.6">
+                <interactivity:Interaction.Behaviors>
+                    <acrylic:Blur Value="1"
+                        AutomaticallyStart="True" />
+                </interactivity:Interaction.Behaviors>
+            </Grid>
+        </Grid>
 
 
         <Pivot>
