--- a/YesPojiQuota.Windows/Views/Partials/InnAppToastNotification.xaml
+++ b/YesPojiQuota.Windows/Views/Partials/InnAppToastNotification.xaml
@@ -25,6 +25,22 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
+            <Grid.Resources>
+                <Storyboard x:Name="SessionGridEnter" Completed="AnimationCompleted">
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SessionGrid" Storyboard.TargetProperty="(UIElement.Visibility)" >
+                        <DiscreteObjectKeyFrame KeyTime="0:0:0" Value="Visible" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <FadeInThemeAnimation Storyboard.TargetName="SessionGrid"/>
+                    <RepositionThemeAnimation Storyboard.TargetName="SessionGrid" FromVerticalOffset="-100"/>
+                </Storyboard>
+                <Storyboard x:Name="SessionGridExit" Completed="AnimationCompleted">
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="SessionGrid" Storyboard.TargetProperty="(UIElement.Visibility)" >
+                        <DiscreteObjectKeyFrame KeyTime="0:0:0.2" Value="Collapsed" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <FadeOutThemeAnimation Storyboard.TargetName="SessionGrid"/>
+                </Storyboard>
+            </Grid.Resources>
+
             <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Padding="5 5 0 0">
                 <TextBlock Text="Network Status:" Padding="5 0 0 0"/>
                 <TextBlock Text="{x:Bind Vm.Status, Mode=OneWay}" Padding="10 0 0 0" />
@@ -40,10 +56,15 @@
                 </Grid>
             </StackPanel>
 
-            <Button Grid.Column="1" Content="Show/Hide Session" Grid.RowSpan="2" Click="Button_Click"/>
+            <Button Grid.Column="1" Content="Show/Hide Session" Grid.RowSpan="2" Click="Button_Click">
+                <!--<Button.Triggers>
+                </Button.Triggers>-->
+            </Button>
 
             <Grid x:Name="SessionGrid" Grid.Row="2" Grid.ColumnSpan="2" Padding="10 7 10 7"
                   Background="{ThemeResource SystemAccentColorDark1}">
+                
+                
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition/>
@@ -56,7 +77,7 @@
                     <TextBlock Text="Time Connected" />
                 </StackPanel>
 
-                <StackPanel Grid.Column="1" Padding="10 0">
+                <StackPanel Grid.Column="1" Padding="10 0 0 0">
                     <TextBlock Text="{x:Bind Vm.Received, Mode=OneWay}" />
                     <TextBlock Text="{x:Bind Vm.Sent, Mode=OneWay}" />
                     <TextBlock Text="{x:Bind Vm.TimeConnected, Mode=OneWay}" />
