--- a/YesPojiQuota.Windows/Views/Partials/AccountInputDialog.xaml
+++ b/YesPojiQuota.Windows/Views/Partials/AccountInputDialog.xaml
@@ -11,7 +11,8 @@
     SecondaryButtonText="Cancel"
     PrimaryButtonClick="{x:Bind Vm.Save}"
     SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
-    KeyUp="ContentDialog_KeyUp" MaxHeight="500"
+    KeyUp="ContentDialog_KeyUp" 
+    MaxHeight="500"
     >
 
     <Grid>
@@ -22,7 +23,6 @@
                      Margin="0,2" TabIndex="0"/>
 
             <Grid>
-
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -40,7 +40,6 @@
                 <CheckBox x:Name="LoginCheckbox" Content="Enable Login" Margin="0,10"
                           IsChecked="{x:Bind Vm.EnableLogin, Mode=TwoWay}"
                           Unchecked="LoginCheckbox_Unchecked" Grid.Row="2" TabIndex="2"/>
-
             </Grid>
 
         </StackPanel>
